<resources>
    <string name="app_name">Alpetour vozni red</string>
    <string name="button_send">Prikaži</string>
    <string name="button_calendar">Koledar</string>
    <string name="vstop">Vstop:</string>
    <string name="izstop">Izstop:</string>
    <string name="vstop_hint">Vstopna postaja</string>
    <string name="izstop_hint">Izstopna postaja</string>
    <string name="koledar">Koledar</string>
    <string name="izberi_dan">Izberi dan:</string>
    <string name="menjaj">Menjaj</string>
    <string name="zvezda">Zvezda</string>
    <string name="zamenjaj">Zamenjaj</string>
    <string name="shrani_relacijo">Shrani relacijo</string>
</resources>