<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lukag.atvoznired.MainActivity">

    <AutoCompleteTextView
        android:id="@+id/vstopna_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:dropDownWidth="match_parent"
        android:ems="10"
        android:freezesText="true"
        android:gravity="center"
        android:hint="@string/vstop_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/invert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintWidth_percent=".5" />

    <AutoCompleteTextView
        android:id="@+id/izstopna_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:dropDownWidth="match_parent"
        android:ems="10"
        android:freezesText="true"
        android:gravity="center"
        android:hint="@string/izstop_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textCalendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invert"
        app:layout_constraintWidth_percent=".5" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/button_send"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCalendar"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/textCalendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:freezesText="true"
        android:gravity="center"
        android:hint="@string/koledar"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/izstopna_text"
        app:layout_constraintWidth_percent=".5" />

    <Button
        android:id="@+id/invert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@android:drawable/stat_notify_sync"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/menjaj"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/izstopna_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vstopna_text" />

</android.support.constraint.ConstraintLayout>
